Renamed CatapultConfig to NetworkConfig. Renamed CatapultUpgrade to BlockchainUpgrade
